--- a/public/css/style.css
+++ b/public/css/style.css
@@ -50,7 +50,9 @@ h2 {
   display: flex;
   flex-direction: column;
   padding: 1em;
+  background: #f5f5f5;
 }
+
 .Results {
   flex: 8;
   width: 100%;
@@ -92,7 +94,7 @@ button {
   text-align: center;
 }
 
-.property {
+.Property {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -100,21 +102,25 @@ button {
   padding: 1em;
 }
 
-.property-title {
+.Property__label {
+  font-weight: 500;
+}
+
+.Property__title {
   display: flex;
   gap: 0.4em;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: space-between;
   margin-bottom: 0.4em;
 }
 
-.property-name {
+.Property__name {
   font-weight: 500;
   font-size: 1.2em;
 }
 
-.property-count,
-.property-type {
+.Property__count,
+.Property__type {
   display: inline-flex;
   align-items: center;
   justify-content: center;
@@ -124,19 +130,20 @@ button {
   font-size: 0.8em;
   text-transform: uppercase;
   padding: 4px 8px;
+  font-weight: 500;
 }
 
-.property-type.is-boolean {
+.Property__type.is-boolean {
   background: #daffe0;
   color: #144722;
 }
 
-.property-type.is-text {
+.Property__type.is-text {
   background: #dff4ff;
   color: #1b2c68;
 }
 
-.property-type.is-variant {
+.Property__type.is-variant {
   background: #fff2d7;
   color: #4d3716;
 }
