--- a/public/css/style.css
+++ b/public/css/style.css
@@ -66,6 +66,17 @@ form {
   gap: 0.8em;
 }
 
+.Form__field {
+  display: flex;
+  flex-direction: column;
+  gap: 0.4em;
+}
+
+label {
+  font-weight: 500;
+  font-size: 0.8em;
+}
+
 input,
 button {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
@@ -154,4 +165,17 @@ button {
   justify-content: center;
   width: 100%;
   height: 100%;
+  animation: fadeInOut 2s ease-in-out infinite;
+}
+
+@keyframes fadeInOut {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
