--- a/public/css/style.css
+++ b/public/css/style.css
@@ -118,6 +118,7 @@ button {
   border-bottom: 1px solid var(--border-color);
   padding: 1em;
   cursor: pointer;
+  user-select: none;
 }
 .Property:hover {
   background: #fafafa;
@@ -141,10 +142,8 @@ button {
 
 .Property__title {
   display: flex;
-  gap: 0.4em;
   align-items: center;
   justify-content: space-between;
-  margin-bottom: 0.4em;
 }
 
 .Property__name {
