--- a/public/css/style.css
+++ b/public/css/style.css
@@ -75,7 +75,9 @@ h2 {
 
 .Results__header.is-visible {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .Results__content {
@@ -130,6 +132,31 @@ button {
 
 button {
   cursor: pointer;
+}
+
+input[type="text"] {
+  font-family: inherit;
+  font-size: 0.8em;
+  padding: 10px;
+  border: 1px solid var(--border-color);
+  border-radius: 4px;
+  background-color: var(--white);
+  color: var(--text);
+  transition:
+    border-color 0.3s,
+    box-shadow 0.3s;
+}
+
+input[type="text"]:hover,
+.TypeFilter:hover {
+  border-color: #b3b3b3;
+}
+
+input[type="text"]:focus,
+.TypeFilter:focus {
+  outline: none;
+  border-color: #4a90e2;
+  box-shadow: 0 0 0 2px rgba(74, 144, 226, 0.2);
 }
 
 .Download button {
@@ -270,6 +297,48 @@ button {
 
 .Property__components {
   margin-top: 0.4em;
+}
+
+.Filter {
+  font-family: inherit;
+  font-size: 0.8em;
+  padding: 8px;
+  border: 1px solid var(--border-color);
+  border-radius: 4px;
+  background-color: var(--white);
+  color: var(--text);
+  cursor: pointer;
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  background-image: url("data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%23131313%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13-5.4H18.4c-5%200-9.3%201.8-12.9%205.4A17.6%2017.6%200%200%200%200%2082.2c0%205%201.8%209.3%205.4%2012.9l128%20127.9c3.6%203.6%207.8%205.4%2012.8%205.4s9.2-1.8%2012.8-5.4L287%2095c3.5-3.5%205.4-7.8%205.4-12.8%200-5-1.9-9.2-5.5-12.8z%22%2F%3E%3C%2Fsvg%3E");
+  background-repeat: no-repeat;
+  background-position: right 0.7em top 50%;
+  background-size: 0.65em auto;
+  padding-right: 2em;
+}
+
+.Filter:hover {
+  border-color: #b3b3b3;
+}
+
+.Filter:focus {
+  outline: none;
+  border-color: #4a90e2;
+  box-shadow: 0 0 0 2px rgba(74, 144, 226, 0.2);
+}
+
+.Filter option {
+  font-weight: normal;
+  display: block;
+  white-space: nowrap;
+  min-height: 1.2em;
+  padding: 0 2px 1px;
+}
+
+.Info {
+  font-size: 0.9em;
+  color: #666;
 }
 
 @keyframes fadeInOut {
