--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,6 +10,7 @@
   --text: var(--black);
   --space: 0.4em;
   --border-radius: 4px;
+  --header-height: 110px;
 }
 
 /* Base Styles */
@@ -104,7 +105,7 @@ h2 {
 }
 
 .Results__content {
-  height: 100%;
+  height: calc(100% - var(--header-height));
   overflow-y: auto;
 }
 
