--- a/public/css/style.css
+++ b/public/css/style.css
@@ -76,6 +76,9 @@ h2 {
   flex: 8;
   width: 100%;
   border-left: 1px solid var(--border-color);
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 }
 
 .Results.has-error .Results__header {
@@ -105,8 +108,9 @@ h2 {
 }
 
 .Results__content {
-  height: calc(100% - var(--header-height));
+  flex-grow: 1;
   overflow-y: auto;
+  padding-bottom: 1em;
 }
 
 .Results__loader {
@@ -401,6 +405,78 @@ input[type="text"]:focus {
   color: #666;
 }
 
+.Inconsistencies {
+  border-bottom: 1px solid var(--border-color);
+  background-color: #fff2d7;
+  font-size: 0.8em;
+}
+
+.Inconsistencies__header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1em;
+  cursor: pointer;
+  position: relative;
+}
+
+.Inconsistencies__header:after {
+  content: "";
+  position: absolute;
+  background-image: url("data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%23131313%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13-5.4H18.4c-5%200-9.3%201.8-12.9%205.4A17.6%2017.6%200%200%200%200%2082.2c0%205%201.8%209.3%205.4%2012.9l128%20127.9c3.6%203.6%207.8%205.4%2012.8%205.4s9.2-1.8%2012.8-5.4L287%2095c3.5-3.5%205.4-7.8%205.4-12.8%200-5-1.9-9.2-5.5-12.8z%22%2F%3E%3C%2Fsvg%3E");
+  right: 1em;
+  top: 50%;
+  width: 12px;
+  height: 12px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  transform: translateY(-50%);
+  transition: transform 150ms ease-in-out;
+}
+
+.Inconsistencies__header.is-open:after {
+  transform: translateY(-50%) rotate(180deg);
+}
+
+.Inconsistencies__list {
+  padding: 1em;
+  margin: 0;
+  border-top: 1px solid #ddd;
+  background: #f1f1f1;
+}
+
+.Inconsistencies__list.hidden {
+  display: none;
+}
+
+.Inconsistencies__list li {
+  margin-bottom: 5px;
+}
+
+.Inconsistencies__list li strong {
+  font-weight: 600;
+}
+
+.Inconsistencies__variant-link {
+  cursor: pointer;
+}
+
+.Inconsistencies__variant-link:hover {
+  text-decoration: underline;
+}
+
+.Property.highlight {
+  animation: highlightFade 2s;
+}
+
+@keyframes highlightFade {
+  0% {
+    background-color: #fff2d7;
+  }
+  100% {
+    background-color: transparent;
+  }
+}
 @keyframes fadeInOut {
   0%,
   100% {
