--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,6 +11,8 @@
   --space: 0.4em;
   --border-radius: 4px;
   --header-height: 110px;
+  --small-font-size: 0.9em;
+  --tiny-font-size: 0.8em;
 }
 
 /* Base Styles */
@@ -122,7 +124,7 @@ h2 {
   user-select: none;
   top: 0;
   left: 0;
-  font-size: 0.8em;
+  font-size: var(--tiny-font-size);
   display: none;
 }
 
@@ -148,14 +150,14 @@ form {
 
 label {
   font-weight: 500;
-  font-size: 0.8em;
+  font-size: var(--tiny-font-size);
 }
 
 input,
 button {
   box-sizing: border-box;
   font-family: inherit;
-  font-size: 0.8em;
+  font-size: var(--tiny-font-size);
   padding: 8px;
   height: 40px;
 }
@@ -191,7 +193,7 @@ button.is-secondary:hover {
 
 input[type="text"] {
   font-family: inherit;
-  font-size: 0.8em;
+  font-size: var(--tiny-font-size);
   padding: 10px;
   border: 1px solid var(--border-color);
   border-radius: var(--border-radius);
@@ -224,7 +226,7 @@ input[type="text"]:focus {
   justify-content: space-between;
   border-bottom: 1px solid var(--border-color);
   padding: 1em;
-  font-size: 0.8em;
+  font-size: var(--tiny-font-size);
   cursor: pointer;
   user-select: none;
 }
@@ -287,7 +289,7 @@ input[type="text"]:focus {
   background: var(--white);
   border: 1px solid var(--border-color);
   color: var(--text);
-  font-size: 0.8em;
+  font-size: var(--tiny-font-size);
   border-radius: 20px;
   padding: 2px 8px;
   text-decoration: none;
@@ -308,7 +310,7 @@ input[type="text"]:focus {
   background: var(--highlighted-color);
   color: var(--text);
   border-radius: var(--border-radius);
-  font-size: 0.8em;
+  font-size: var(--tiny-font-size);
   text-transform: uppercase;
   padding: 4px 8px;
   font-weight: 500;
@@ -364,7 +366,7 @@ input[type="text"]:focus {
 
 .Select {
   font-family: inherit;
-  font-size: 0.8em;
+  font-size: var(--tiny-font-size);
   padding: 8px;
   border: 1px solid var(--border-color);
   border-radius: var(--border-radius);
@@ -401,14 +403,14 @@ input[type="text"]:focus {
 }
 
 .Info {
-  font-size: 0.9em;
+  font-size: var(--small-font-size);
   color: #666;
 }
 
 .Inconsistencies {
   border-bottom: 1px solid var(--border-color);
   background-color: #fff2d7;
-  font-size: 0.8em;
+  font-size: var(--tiny-font-size);
 }
 
 .Inconsistencies__header {
@@ -462,27 +464,25 @@ input[type="text"]:focus {
 .Inconsistencies__list li {
   display: flex;
   background: var(--white);
-  border-radius: var(--border-radius);
+  border: 1px solid var(--border-color);
+  font-size: var(--small-font-size);
 }
 
 .Inconsistencies__variant-count {
   opacity: 0.5;
 }
 
-.Inconsistencies__variant-info:last-child {
-  border-right: none;
-}
-
 .Inconsistencies__variant-info {
   display: flex;
   flex-direction: row;
   align-items: center;
-  border-right: 1px solid #f1f1f1;
+  border-right: 1px solid var(--border-color);
   padding: 0.6em;
   gap: 0.4em;
 }
+
 .Inconsistencies__component-list {
-  font-size: 0.9em;
+  display: none;
 }
 
 .Inconsistencies__list li strong {
